--- a/ExpenseManager/Views/Shared/_Layout.cshtml
+++ b/ExpenseManager/Views/Shared/_Layout.cshtml
@@ -6,11 +6,13 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
 </head>
 <body>
+    @Html.Partial("_Flash")
     @RenderBody()
 
-    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryflash")
     @RenderSection("scripts", required: false)
 </body>
 </html>
