Add links for AddCategory and AddExpense controllers

--- a/ExpenseManager/Views/Home/Index.cshtml
+++ b/ExpenseManager/Views/Home/Index.cshtml
@@ -4,6 +4,9 @@
 
 <h2>Index</h2>
 
+<a href="/Category/Create">Add Category</a><br />
+<a href="/Expense/Create">Add Expense</a>
+
 <h3>List Expenses</h3>
 <form>
     <label for="ListFrom">From:</label>
